Source/WebCore/bindings/js/JSDOMPromise.h
@@ -82,6 +82,14 @@ inline void DeferredWrapper::reject(const std::nullptr_t&)
 }
 
 template<>
+inline void DeferredWrapper::reject(const JSC::JSValue& value)
+{
+    JSC::ExecState* exec = m_globalObject->globalExec();
+    JSC::JSLockHolder locker(exec);
+    reject(exec, value);
+}
+
+template<>
 inline void DeferredWrapper::resolve<String>(const String& result)
 {
     JSC::ExecState* exec = m_globalObject->globalExec();
